[project]
name = "asd"
version = "0.0.1"
authors = [
  { name="Cédric Renda", email="cedric.renda@hotmail.com" },
]
description = "ASD is an data scraping package for the meteoblue website"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gosow9.github.io/asd/"
Issues = "https://github.com/gosow9/asd/issues"